test/expected/large/compute/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: compservice
    foo.com/duversion: 1.4.10-20190911.1568209638137
    foo.com/version: 1.4.10
  labels:
    app.kubernetes.io/name: compute
    helm.sh/chart: compute-1.4.10
  name: compute
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: compute
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: compute
        app.kubernetes.io/name: compute
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/mlrning-125.0.0-x64_redhat_linux_7-docker-prod/foo-compute:1.4.10-20190911.1568209638137
        imagePullPolicy: IfNotPresent
        name: compute
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
      initContainers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        image: docker.foo.com/yesbut/init-blocker:1.7
        name: init-blocker
