test/expected/large/compute/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: compservice
    foo.com/duversion: 1.4.10-20190911.1568209638137
    foo.com/version: 1.4.10
  labels:
    app.kubernetes.io/name: compute
    helm.sh/chart: compute-1.4.10
  name: compute
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: compute
  type: ClusterIP
